@@ -250,15 +250,19 @@ export("%<>%")
 export("%>%")
 export("%a%")
 export("%add_rows%")
+export("%between%")
 export("%calc%")
 export("%calculate%")
+export("%chin%")
 export("%col_in%")
 export("%d%")
 export("%e%")
 export("%has%")
 export("%i%")
 export("%if_na%")
+export("%inrange%")
 export("%into%")
+export("%like%")
 export("%merge%")
 export("%mis_val%")
 export("%n_d%")
@@ -316,6 +320,8 @@ export(.sort_desc)
 export(.val_lab)
 export(.var_lab)
 export(.where)
+export(CJ)
+export(SJ)
 export(add_columns)
 export(add_rows)
 export(add_sig_labels)
@@ -342,6 +348,7 @@ export(as.labelled)
 export(as.sheet)
 export(as_is)
 export(autonum)
+export(between)
 export(by_groups)
 export(calc)
 export(calc_cro)
@@ -359,6 +366,9 @@ export(calc_cro_spearman)
 export(calc_cro_sum)
 export(calc_cro_tpct)
 export(calculate)
+export(chgroup)
+export(chmatch)
+export(chorder)
 export(combine_functions)
 export(compare_means)
 export(compare_proportions)
@@ -383,6 +393,7 @@ export(cro_sum)
 export(cro_tpct)
 export(data.table)
 export(datatable)
+export(dcast)
 export(default_dataset)
 export(do_if)
 export(do_repeat)
@@ -409,8 +420,12 @@ export(expss_output_raw)
 export(expss_output_rnotebook)
 export(expss_output_viewer)
 export(fctr)
+export(fintersect)
 export(first)
 export(fixed)
+export(foverlaps)
+export(frank)
+export(frankv)
 export(fre)
 export(fread)
 export(from)
@@ -419,11 +434,18 @@ export(from_text_csv)
 export(from_text_csv2)
 export(from_text_tab)
 export(from_text_tab2)
+export(fsetdiff)
+export(fsetequal)
+export(fsort)
+export(funion)
 export(fwrite)
 export(ge)
+export(getDTthreads)
+export(getNumericRounding)
 export(get_expss_digits)
 export(gt)
 export(gte)
+export(haskey)
 export(hi)
 export(htmlTable)
 export(htmlTableWidget)
@@ -433,9 +455,11 @@ export(if_val)
 export(ifs)
 export(index_col)
 export(index_row)
+export(indices)
 export(indirect)
 export(indirect_list)
 export(info)
+export(inrange)
 export(interactiveTable)
 export(is.category)
 export(is.data.table)
@@ -444,10 +468,12 @@ export(is.etable)
 export(is.labelled)
 export(items)
 export(keep)
+export(key)
 export(knit_print.etable)
 export(lab_num)
 export(last)
 export(le)
+export(like)
 export(lo)
 export(lst)
 export(lt)
@@ -472,6 +498,7 @@ export(median_col_if)
 export(median_if)
 export(median_row)
 export(median_row_if)
+export(melt)
 export(min_col)
 export(min_col_if)
 export(min_if)
@@ -500,6 +527,7 @@ export(prop)
 export(prop_col)
 export(prop_row)
 export(qc)
+export(rbindlist)
 export(read_labelled_csv)
 export(read_labelled_csv2)
 export(read_labelled_tab)
@@ -511,17 +539,33 @@ export(ref)
 export(regex)
 export(repr_html.etable)
 export(repr_text.etable)
+export(rleid)
+export(rleidv)
+export(rowid)
+export(rowidv)
 export(sd_col)
 export(sd_col_if)
 export(sd_if)
 export(sd_row)
 export(sd_row_if)
+export(set)
+export(set2key)
+export(set2keyv)
 export(setDF)
 export(setDT)
+export(setDTthreads)
+export(setNumericRounding)
 export(set_val_lab)
 export(set_var_lab)
+export(setattr)
+export(setcolorder)
+export(setindex)
+export(setindexv)
 export(setkey)
 export(setkeyv)
+export(setnames)
+export(setorder)
+export(setorderv)
 export(sheet)
 export(shift)
 export(significance_cases)
@@ -582,9 +626,13 @@ export(tab_total_row_position)
 export(tab_total_statistic)
 export(tab_transpose)
 export(tab_weight)
+export(tables)
 export(thru)
 export(to)
 export(total)
+export(transpose)
+export(tstrsplit)
+export(uniqueN)
 export(unlab)
 export(unvl)
 export(unvr)
