@@ -33,6 +33,110 @@
 \alias{reexports}
 \alias{last}
 \alias{reexports}
+\alias{setorder}
+\alias{reexports}
+\alias{setcolorder}
+\alias{reexports}
+\alias{between}
+\alias{reexports}
+\alias{chgroup}
+\alias{reexports}
+\alias{chmatch}
+\alias{reexports}
+\alias{chorder}
+\alias{reexports}
+\alias{CJ}
+\alias{reexports}
+\alias{dcast}
+\alias{reexports}
+\alias{fintersect}
+\alias{reexports}
+\alias{foverlaps}
+\alias{reexports}
+\alias{frank}
+\alias{reexports}
+\alias{frankv}
+\alias{reexports}
+\alias{fsetdiff}
+\alias{reexports}
+\alias{fsetequal}
+\alias{reexports}
+\alias{fsort}
+\alias{reexports}
+\alias{funion}
+\alias{reexports}
+\alias{getDTthreads}
+\alias{reexports}
+\alias{getNumericRounding}
+\alias{reexports}
+\alias{haskey}
+\alias{reexports}
+\alias{indices}
+\alias{reexports}
+\alias{inrange}
+\alias{reexports}
+\alias{key}
+\alias{reexports}
+\alias{like}
+\alias{reexports}
+\alias{melt}
+\alias{reexports}
+\alias{rbindlist}
+\alias{reexports}
+\alias{rleid}
+\alias{reexports}
+\alias{rleidv}
+\alias{reexports}
+\alias{rowid}
+\alias{reexports}
+\alias{rowidv}
+\alias{reexports}
+\alias{set}
+\alias{reexports}
+\alias{set2key}
+\alias{reexports}
+\alias{set2keyv}
+\alias{reexports}
+\alias{setattr}
+\alias{reexports}
+\alias{setcolorder}
+\alias{reexports}
+\alias{setDTthreads}
+\alias{reexports}
+\alias{setindex}
+\alias{reexports}
+\alias{setindexv}
+\alias{reexports}
+\alias{setkey}
+\alias{reexports}
+\alias{setkeyv}
+\alias{reexports}
+\alias{setnames}
+\alias{reexports}
+\alias{setNumericRounding}
+\alias{reexports}
+\alias{setorder}
+\alias{reexports}
+\alias{setorderv}
+\alias{reexports}
+\alias{SJ}
+\alias{reexports}
+\alias{tables}
+\alias{reexports}
+\alias{transpose}
+\alias{reexports}
+\alias{tstrsplit}
+\alias{reexports}
+\alias{uniqueN}
+\alias{reexports}
+\alias{\%between\%}
+\alias{reexports}
+\alias{\%chin\%}
+\alias{reexports}
+\alias{\%inrange\%}
+\alias{reexports}
+\alias{\%like\%}
+\alias{reexports}
 \alias{htmlTable}
 \alias{reexports}
 \alias{htmlTableWidget}
@@ -47,7 +151,7 @@ These objects are imported from other packages. Follow the links
 below to see their documentation.
 
 \describe{
-  \item{data.table}{\code{\link[data.table]{data.table}}, \code{\link[data.table]{as.data.table}}, \code{\link[data.table]{is.data.table}}, \code{\link[data.table]{setDF}}, \code{\link[data.table]{setDT}}, \code{\link[data.table]{setkey}}, \code{\link[data.table]{setkeyv}}, \code{\link[data.table]{fread}}, \code{\link[data.table]{fwrite}}, \code{\link[data.table]{shift}}, \code{\link[data.table]{first}}, \code{\link[data.table]{last}}}
+  \item{data.table}{\code{\link[data.table]{data.table}}, \code{\link[data.table]{as.data.table}}, \code{\link[data.table]{is.data.table}}, \code{\link[data.table]{setDF}}, \code{\link[data.table]{setDT}}, \code{\link[data.table]{setkey}}, \code{\link[data.table]{setkeyv}}, \code{\link[data.table]{fread}}, \code{\link[data.table]{fwrite}}, \code{\link[data.table]{shift}}, \code{\link[data.table]{first}}, \code{\link[data.table]{last}}, \code{\link[data.table]{setorder}}, \code{\link[data.table]{setcolorder}}, \code{\link[data.table]{between}}, \code{\link[data.table]{chgroup}}, \code{\link[data.table]{chmatch}}, \code{\link[data.table]{chorder}}, \code{\link[data.table]{CJ}}, \code{\link[data.table]{dcast}}, \code{\link[data.table]{fintersect}}, \code{\link[data.table]{foverlaps}}, \code{\link[data.table]{frank}}, \code{\link[data.table]{frankv}}, \code{\link[data.table]{fsetdiff}}, \code{\link[data.table]{fsetequal}}, \code{\link[data.table]{fsort}}, \code{\link[data.table]{funion}}, \code{\link[data.table]{getDTthreads}}, \code{\link[data.table]{getNumericRounding}}, \code{\link[data.table]{haskey}}, \code{\link[data.table]{indices}}, \code{\link[data.table]{inrange}}, \code{\link[data.table]{key}}, \code{\link[data.table]{like}}, \code{\link[data.table]{melt}}, \code{\link[data.table]{rbindlist}}, \code{\link[data.table]{rleid}}, \code{\link[data.table]{rleidv}}, \code{\link[data.table]{rowid}}, \code{\link[data.table]{rowidv}}, \code{\link[data.table]{set}}, \code{\link[data.table]{set2key}}, \code{\link[data.table]{set2keyv}}, \code{\link[data.table]{setattr}}, \code{\link[data.table]{setcolorder}}, \code{\link[data.table]{setDTthreads}}, \code{\link[data.table]{setindex}}, \code{\link[data.table]{setindexv}}, \code{\link[data.table]{setkey}}, \code{\link[data.table]{setkeyv}}, \code{\link[data.table]{setnames}}, \code{\link[data.table]{setNumericRounding}}, \code{\link[data.table]{setorder}}, \code{\link[data.table]{setorderv}}, \code{\link[data.table]{SJ}}, \code{\link[data.table]{tables}}, \code{\link[data.table]{transpose}}, \code{\link[data.table]{tstrsplit}}, \code{\link[data.table]{uniqueN}}, \code{\link[data.table]{\%between\%}}, \code{\link[data.table]{\%chin\%}}, \code{\link[data.table]{\%inrange\%}}, \code{\link[data.table]{\%like\%}}}
 
   \item{htmlTable}{\code{\link[htmlTable]{htmlTable}}, \code{\link[htmlTable]{htmlTableWidget}}, \code{\link[htmlTable]{htmlTableWidgetOutput}}, \code{\link[htmlTable]{interactiveTable}}}
 
