@@ -1,6 +1,8 @@
 0.8.7 (.2018)
 ================
+* more exports from data.table
 * fix 'add_columns' for data.table
+* fix 'do_if' for data.table
 
 
 0.8.6 (24.01.2018)
